# TakosEncryptInk

./: test.ts
js/: test.ts
rust/: Cargo.toml
rust/src/: account_key.rs  core.rs  crypto.rs  device_key.rs  identity_key.rs  keyutils.rs  lib.rs  main.rs  master_key.rs  message.rs  migrate_key.rs  room_key.rs  schema.rs  server_key.rs  share_key.rs  signature.rs  type.rs  utils.rs
rust_ts/: Cargo.toml  compatibility_test.ts  deno.json  test.ts
rust_ts/src/: lib.rs
ts/: deno.json
ts/src/: accountKey.ts  core.ts  deviceKey.ts  identityKey.ts  masterKey.ts  message.ts  migrateKey.ts  mod.ts  roomKey.ts  serverKey.ts  shareKey.ts  type.ts  utils.ts
ts_regacy/: deno.json
ts_regacy/src/: accountKey.ts  crypto.ts  deviceKey.ts  identityKey.ts  keyUtils.ts  masterKey.ts  message.ts  migrateKey.ts  mod.ts  roomKey.ts  schema.ts  serverKey.ts  shareKey.ts  signature.ts  test.ts  type.ts  utils.ts
